@@ -1,10 +1,10 @@
 ﻿namespace AllOverIt.Aws.AppSync.Client.Authorization
 {
-    /// <summary>Contains AppSync ApiKey authorization header key-value pairs.</summary>
+    /// <summary>Initialized with an 'x-api-key' authorization header key-value pair.</summary>
     public sealed class AppSyncApiKeyAuthorization : AppSyncAuthorizationBase
     {
         /// <summary>Constructor.</summary>
-        /// <param name="apiKey">The authorization ApiKey.</param>
+        /// <param name="apiKey">The authorization API Key.</param>
         public AppSyncApiKeyAuthorization(string apiKey)
         {
             KeyValues.Add("x-api-key", apiKey);
